# solodesk

./: .gitignore  .prettierignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  PENDING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_scheduling.sql  003_oplog_append_only.sql
src-tauri/src/: lib.rs  main.rs
src/components/: App.tsx  BoardView.tsx  CalendarView.tsx  CommandPalette.tsx  Icons.tsx  ListView.tsx  QuickCapture.tsx  Sidebar.tsx  StatusPill.tsx  TaskRow.tsx  TodayView.tsx
src/db/: client.test.ts  client.ts  testing.ts
src/lib/: date.test.ts  date.ts  layout.test.ts  layout.ts  resolver.test.ts  resolver.ts  types.ts
src/state/: store.ts
