[package]
name = "solodesk"
version = "0.1.0"
description = "A local-first, single-user ClickUp-inspired task app"
edition = "2021"
rust-version = "1.77"

# The library that main.rs calls into (Tauri v2 convention).
[lib]
name = "solodesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# SQLite plugin — the frontend talks to it via @tauri-apps/plugin-sql.
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
